<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityLifecycle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
     <string name="action_save_instance">Save Instance Example</string>
    
     <string name="implecit_intent">implecit Intent</string>
    
     <string name="customtoast">CustomToast</string>
    
     <string name="activity_dynamic_frag">Activity Dynamic Frag</string>
    
     <string name="fragment_manager">fragment Manager</string>
    
     <string name="fragment_module">Fragment Module</string>
    
     <string name="fragment_a">Fragment A</string>
    
     <string name="fragment_b">Fragment B</string>
    
     <string name="fragment_transaction">Fragment Transaction</string>

</resources>
