<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_save_instance"
        android:orderInCategory="100"
        android:title="@string/action_save_instance"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_implicit_intent"
        android:orderInCategory="100"
        android:title="@string/implecit_intent"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_custom_toast"
        android:orderInCategory="100"
        android:title="@string/customtoast"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_dynamic_frag"
        android:orderInCategory="100"
        android:title="@string/activity_dynamic_frag"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_fragment_manager"
        android:orderInCategory="100"
        android:title="@string/fragment_manager"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_fragment_module_ui"
        android:orderInCategory="100"
        android:title="@string/fragment_module"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/action_fragment_transaction"
        android:orderInCategory="100"
        android:title="@string/fragment_transaction"
        android:showAsAction="never"/>
    

</menu>